# elifoot98-launcher

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
docs/: referee-list.md
game/: COUNTRY.TXE  GAUGE.VBX  REFEREE.TXE
game/CTRGROUP/: BOSMAN.TXE  PLOP.TXE
game/EQUIPAS/: ACADEMIC.EFT  ADMIRA.EFT  AEK_LARN.EFT  AJAX.EFT  ALCANENE.EFT  ALVERCA.EFT  AL_AHLY.EFT  AMAZULU.EFT  AMERICA.EFT  AMERI_SP.EFT  AMORA.EFT  ANADIA.EFT  ANDERLEC.EFT  ARSENAL.EFT  ASTONVIL.EFT  ATLET_MG.EFT  ATLET_PR.EFT  ATL_MADR.EFT  AVES.EFT  BAHIA.EFT  BARCELON.EFT  BAYERN.EFT  BEIRAMAR.EFT  BEITAR.EFT  BELENENS.EFT  BENFICA.EFT  BETIS.EFT  BILBAO.EFT  BIRMINGH.EFT  BK_COPEN.EFT  BLACKBUR.EFT  BOAVISTA.EFT  BOTAFOGO.EFT  BRAGA.EFT  BRAGANTI.EFT  BRENTFOR.EFT  BURSASPO.EFT  B_LEVERK.EFT  CAMPOMAI.EFT  CAPETOWN.EFT  (+154 more)
game/JOGOS/: DRLIST.ELI
installer/: README.md  setup-registrador.iss  setup.iss
native/ScreenHook/: CMakeLists.txt  README.md  dllmain.cpp
scripts/: build-all.sh  build-registrador-payload.sh  fetch-deps.sh  patch_ptbr.py  patch_ptbr_minimal.py  pull-latest.sh
src/: CrackHeadless.cs  DllInjector.cs  ElifootLauncher.csproj  GameLauncher.cs  KeygenForm.cs  LauncherConfig.cs  MainForm.cs  PatchApplier.cs  Program.cs  RefereeCodec.cs  RefereeEditorForm.cs  SaveCodec.cs  SaveEditorForm.cs  SettingsForm.cs  app.manifest
src-registrador/: CrackHeadless.cs  ElifootRegistrador.csproj  KeygenForm.cs  Payload.cs  Program.cs
src/Embedded/: eli.cod  elif98.ini
